tests/e2e/expression_no_event2.error
Error: syntax error in story at line 1, column 6

1|    a = (http server)
           ^^^^^^^^^^^

E0156: Event based action `server` of service `http` cannot be used in expressions.
